app/assets/stylesheets/new-place-form.css
#add-place {
  font-size: 1.5rem;
  font-weight: 500;
}

#place_address {
  border-bottom: 0 !important;
}

#add-new-place-form label {
  font-size: 0.875rem;
}

#add-new-place-form {
  margin: 0 1.25rem 3rem 1.25rem;
  display: flex;
  flex-direction: column;
  gap: 1rem;
  align-items: center;
}

.add-new-place-form-group {
  display: flex;
  flex-direction: column;
  gap: 0.125rem;
  width: 15rem;
}

.sub-group {
  display: flex;
  flex-direction: column;
  gap: 1rem;
}

#add-new-place-form input[type="text"] {
  height: 2.625rem;
  width: 15rem;
  flex-shrink: 0;
  border-radius: 0.313rem;
  border: 0.063rem solid var(--gray);
}

#add-new-place-form ::placeholder {
  padding: 0.625rem 0.5rem;
}

#add-new-place-form #map {
  width: 15rem;
  height: 7.875rem;
  margin-top: -0.375rem;
  border-radius: 0 0 0.313rem 0.313rem;
  border: 0.063rem solid var(--green);
}

/* Style image upload  */
#add-new-place-form #place_images {
  padding: 0.5rem;
}

#add-new-place-form #place_images::-webkit-file-upload-button {
  visibility: hidden;
}

#add-new-place-form #place_images::before {
  content: "Dosya Seçin";
  display: inline-block;
  outline: none;
  white-space: nowrap;
  -webkit-user-select: none;
  cursor: pointer;
  padding: 0.188rem 0.563rem 0.188rem 0.25rem;
  font-size: 0.875rem;
  border-radius: 0.313rem;
  border: 0.006rem solid var(--black);
  background: var(--white);
  width: 5.625rem;
  height: 1.563rem;
}

.tags-form {
  overflow: scroll;
  height: auto;
  display: flex;
  flex-wrap: wrap;
  gap: 0.75rem;
}

.tag {
  border-radius: 0.313rem;
  border: 0.063rem solid var(--gray);
  padding: 0.625rem 0.5rem;
  display: inline-flex;
  align-items: center;
  gap: 0.25rem;
  width: auto;
}

/* Style image upload  */
#add-new-place-form select {
  width: 10.063rem;
  height: 2.625rem;
  border-radius: 0.313rem;
  border: 0.063rem solid var(--gray);
  font-size: 1rem;
  padding: 0.625rem 0.5rem;
}

#add-new-place-form input[type="submit"] {
  margin-top: 2.25rem;
  width: 15rem;
  height: 2.625rem;
  border-radius: 1.25rem;
  background: var(--green);
  color: var(--white);
  font-weight: 500;
  border: none;
}

.lined::placeholder {
  width: fit-content;
  border-right: 0.063rem solid var(--gray);
}

@media (min-width: 1024px) {
  .add-new-place-form-group {
    width: 35.75rem;
  }

  #add-new-place-form input[type="text"] {
    width: 35.75rem;
  }

  #add-new-place-form #map {
    width: 35.75rem;
  }

  .sub-group {
    display: flex;
    flex-direction: row;
    gap: 0.75rem;
    width: 35.75rem;
  }

  .sub-group input {
    width: 17.5rem !important;
  }

  #add-new-place-form #place_images {
    border-radius: 0.313rem;
    border: 0.063rem solid var(--gray);
  }

  #submit-place {
    align-items: center;
  }
}

